--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.8",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.8",
@@ -25,6 +26,7 @@
     "axios": "^1.13.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "framer-motion": "^12.23.25",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
@@ -32,18 +34,19 @@
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-phone-number-input": "^3.4.14",
     "remixicon": "^4.7.0",
     "shadcn": "^3.5.1",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
+    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
     "@tailwindcss/postcss": "^4",
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.6",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.4.0",
-    "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
-    "prettier-plugin-tailwindcss": "^0.7.1"
+    "tw-animate-css": "^1.4.0"
   }
 }
