--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "react-phone-number-input": "^3.4.14",
     "remixicon": "^4.7.0",
     "shadcn": "^3.5.1",
-    "tailwind-merge": "^3.4.0"
+    "tailwind-merge": "^3.4.0",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.7.0",
